# harmony

./: CMakeLists.txt
config/: addition.conf  boundary.conf  cell.conf  center.conf  common.conf  mcl.conf  pathway.conf  stress.conf
config/0/: addition.conf  boundary.conf  center.conf  common.conf  component.conf  detail.conf
configs/: addition.conf  boundary.conf  cell.conf  center.conf  common.conf  force.conf  mcl.conf  octilinear.conf  pathway.conf  smooth.conf  stress.conf
data/: biological_yun_communities.txt  boundary.graphml  boundary.txt  skeleton-A.xml  skeleton-full.xml  skeleton-major.xml  synthetic.txt  vienna-ubahn.txt
data/frequency/: ingredient_frequency.txt
data/receipt/: American.xml  British.xml  Italian.xml  Makefile  Mexican.xml  main.cpp
data/receipt/meal/: categories.json  meals.json  test.json
data/tiny/: Aminosugar metabolism.xml
data/type/: ingredient_typelist-yun.txt
data/yunhai-recipe/: biological_yun.txt  biological_yun_communities.txt
include/: Common.h  Graph.h  GraphicsBallItem.h  GraphicsEdgeItem.h  GraphicsView.h  Metro.h  Octilinear.h  Smooth.h  Window.h
include/base/: Bone.h  Boundary.h  BoundaryEdgeProperty.h  BoundaryGraph.h  BoundaryGraphProperty.h  BoundaryVertexProperty.h  Cell.h  Color.h  Common.h  CommonClass.h  Config.h  Contour2.h  Controller.h  ControllerBoundary.h  Coord2.h  CurvyTree.h  LevelBase.h  LevelBorder.h  LevelCell.h  LevelDetail.h  LevelHigh.h  LevelMiddle.h  Line2.h  Package.h  Pathway.h  PathwayData.h  Polygon2.h  QuardTree.h  RegionBase.h  RegionData.h  Road.h  Seed.h  SkeletonEdgeProperty.h  SkeletonGraph.h  SkeletonGraphProperty.h  SkeletonVertexProperty.h  ThreadBase.h  ThreadLevelBorder.h  ThreadLevelCellCenter.h  ThreadLevelCellComponent.h  (+23 more)
include/graph/: BaseEdgeProperty.h  BaseGraphProperty.h  BaseVertexProperty.h  BoundaryEdgeProperty.h  BoundaryGraph.h  BoundaryGraphProperty.h  BoundaryVertexProperty.h  DirectedBaseGraph.h  ForceEdgeProperty.h  ForceGraph.h  ForceGraphProperty.h  ForceVertexProperty.h  MetaboliteGraph.h  MetaboliteGraphProperty.h  MetaboliteVertexProperty.h  SkeletonEdgeProperty.h  SkeletonGraph.h  SkeletonGraphProperty.h  SkeletonVertexProperty.h  TreeEdgeProperty.h  TreeGraph.h  TreeGraphProperty.h  TreeVertexProperty.h  UndirectedBaseGraph.h  UndirectedPropertyGraph.h
include/gv/: GraphVizAPI.h
include/optimization/: EnergyBase.h  Force.h  Layout.h  Octilinear.h  Similarity.h  Smooth.h  Stress.h  Voronoi.h
include/steinertree/: include.h
include/ui/: GraphicsBallItem.h  GraphicsBase.h  GraphicsEdgeItem.h  GraphicsPolygonItem.h  GraphicsVertexItem.h  GraphicsView.h  Window.h
include/voronoi/: Voronoi.h
receipt/: main.cpp
receipt/meal/: areas.json  ingredients.json
receipt/xml/: Chinese.xml  Indian.xml  Japanese.xml  Thai.xml
scripts/: batch-clear.sh  batch-testing.sh
src/: Graph.cpp  GraphicsBallItem.cpp  GraphicsEdgeItem.cpp  GraphicsView.cpp  Metro.cpp  Octilinear.cpp  Smooth.cpp  Window.cpp  main.cpp
src/base/: Bone.cpp  Boundary.cpp  BoundaryEdgeProperty.cpp  BoundaryGraph.cpp  BoundaryGraphProperty.cpp  BoundaryVertexProperty.cpp  Cell.cpp  Color.cpp  Common.cpp  Config.cpp  Contour2.cpp  Controller.cpp  ControllerBoundary.cpp  Coord2.cpp  CurvyTree.cpp  Grid2.cpp  LevelBase.cpp  LevelBorder.cpp  LevelCell.cpp  LevelDetail.cpp  LevelHigh.cpp  LevelMiddle.cpp  Line2.cpp  Package.cpp  Pathway.cpp  PathwayData.cpp  Polygon2.cpp  QuardTree.cpp  RegionBase.cpp  RegionData.cpp  Road.cpp  SkeletonEdgeProperty.cpp  SkeletonGraph.cpp  SkeletonGraphProperty.cpp  SkeletonVertexProperty.cpp  ThreadBase.cpp  ThreadLevelBorder.cpp  ThreadLevelCellCenter.cpp  ThreadLevelCellComponent.cpp  ThreadLevelCenter.cpp  (+20 more)
src/boost/: create_dual_graph.hpp
src/core/: Color.cpp  Color.h  Common.cpp  Common.h  CommonClass.h  Config.cpp  Config.h  Contour2.cpp  Contour2.h  Coord2.cpp  CurvyTree.cpp  CurvyTree.h  Grid2.cpp  Grid2.h  LevelBase.cpp  LevelBase.h  LevelBorder.cpp  LevelBorder.h  LevelCell.cpp  LevelCell.h  LevelDetail.cpp  LevelDetail.h  Line2.cpp  Line2.h  Pathway.cpp  Pathway.h  PathwayData.cpp  PathwayData.h  Polygon2.cpp  Polygon2.h  QuardTree.cpp  QuardTree.h  RegionBase.cpp  RegionBase.h  RegionData.cpp  RegionData.h  Road.cpp  Road.h  Seed.h  ThreadBase.cpp  (+11 more)
src/graph/: BaseEdgeProperty.cpp  BaseEdgeProperty.h  BaseGraphProperty.cpp  BaseGraphProperty.h  BaseVertexProperty.cpp  BaseVertexProperty.h  BoundaryEdgeProperty.cpp  BoundaryEdgeProperty.h  BoundaryGraph.cpp  BoundaryGraph.h  BoundaryGraphProperty.cpp  BoundaryGraphProperty.h  BoundaryVertexProperty.cpp  BoundaryVertexProperty.h  DirectedBaseGraph.cpp  DirectedBaseGraph.h  ForceEdgeProperty.cpp  ForceEdgeProperty.h  ForceGraph.cpp  ForceGraph.h  ForceGraphProperty.cpp  ForceGraphProperty.h  ForceVertexProperty.cpp  ForceVertexProperty.h  MetaboliteEdgeProperty.cpp  MetaboliteEdgeProperty.h  MetaboliteGraph.cpp  MetaboliteGraph.h  MetaboliteGraphProperty.cpp  MetaboliteGraphProperty.h  MetaboliteVertexProperty.cpp  MetaboliteVertexProperty.h  SkeletonEdgeGraph.cpp  SkeletonEdgeProperty.cpp  SkeletonEdgeProperty.h  SkeletonGraph.cpp  SkeletonGraph.h  SkeletonGraphProperty.cpp  SkeletonGraphProperty.h  SkeletonVertexProperty.cpp  (+12 more)
src/gv/: GraphVizAPI.cpp  GraphVizAPI.h
src/optimization/: EnergyBase.cpp  EnergyBase.h  Force.cpp  Force.h  Layout.cpp  Layout.h  Octilinear.cpp  Octilinear.h  Similarity.cpp  Similarity.h  Smooth.cpp  Stress.cpp  Stress.h  Voronoi.cpp  Voronoi.h
src/steinertree/: dijkstra.cpp  spanningtree.cpp
src/ui/: GraphicsBallItem.cpp  GraphicsBase.cpp  GraphicsEdgeItem.cpp  GraphicsEdgeItem.h  GraphicsPolygonItem.cpp  GraphicsPolygonItem.h  GraphicsVertexItem.cpp  GraphicsVertexItem.h  GraphicsView.cpp  GraphicsView.h  Window.cpp  Window.h  Window.ui
src/voronoi/: Voronoi.cpp
xml/receipt/: French.xml  Greek.xml  Spanish.xml
xml/tiny/: Alanine and aspartate metabolism.xml  Alkaloid synthesis.xml  Aminosugar metabolism.xml
xml/type/: ingredient_typelist.txt
